#----------------------------------------
# File and Version Information:
#  $Id: ChangeLog 13159 2017-02-18 00:09:27Z dubrovin@SLAC.STANFORD.EDU $
#
# Description:
#  ChangeLog file for package graphqt
#----------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

2017-12-08 Mikhail S. Dubrovin
- update index.rst

Tag: V01-00-17
2017-12-08 Mikhail S. Dubrovin
- tuning and re-factoring
	new file:   FWView.py
	new file:   FWViewImage.py
	modified:   GUUtils.py
	deleted:    GUViewFW.py
	deleted:    GUViewFWImage.py
	modified:   GUViewHist.py
	modified:   QWSpectrum.py

Tag: V01-00-16
2017-12-05 Mikhail S. Dubrovin
- update doc, tune behavior
- modified:
	ColorTable - doc
	GUViewFW - doc, add/modify set_rect_scene, key_usage, set_rect_axes
	IVConfigParameters - doc, add color_table_ind
	IVImageCursorInfo - doc
	IVMain - doc, pass ctab, save ctab index on exit, use cp.current_tab as is
	IVMainButtons - doc
	IVMainTabs - doc
	IVTabDataControl - doc
	IVTabFileName - doc

Tag: V01-00-15
2017-12-04 Mikhail S. Dubrovin
- adjust interaction

Tag: V01-00-14
2017-12-04 Mikhail S. Dubrovin
- adjust interaction between image and spectrum
	modified:   app/iv
	modified:   src/IVMain

Tag: V01-00-13
2017-12-04 Mikhail S. Dubrovin
- adjust interaction between image to make it convenient
- modified:
   iv
   GUViewAxesDL.py
   GUViewGraph.py
   GUViewHist.py
   GUViewImageWithShapes.py
   IVMain.py
   QWSpectrum.py

Tag: V01-00-12
2017-10-26 Mikhail S. Dubrovin
- update keyboard examples for major methods in GUView and GUViewImage
- modified:
  GUView.py
  GUViewAxes.py
  GUViewFW.py
  GUViewImage.py

Tag: V01-00-11
2017-10-20 Mikhail S. Dubrovin
- add sphinx doc titles to all GU* modules

Tag: V01-00-10
2017-09-01 Mikhail S. Dubrovin
- IVTabDataControl - add parameter show_mode_evctl=017

Tag: V01-00-09
2017-07-28 Mikhail S. Dubrovin